static-kyverno-policies/disallow-ip-from-nginx-ip-pool.yaml
---
# Source: kyverno/templates/disallow-ip-from-nginx-ip-pool.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-ip-from-nginx-ip-pool
  annotations:
    policies.kyverno.io/title: Disallow IP from NGinx IP pool
    policies.kyverno.io/category: Tennet
    policies.kyverno.io/severity: low
    policies.kyverno.io/subject: Ingress
    policies.kyverno.io/description: >-
      To be able to quickly migrate access to applications when moving from one
      cluster to another, it is highly desirable that the IP address of the
      ingress stays the same. If the IP address would change, additional
      firewall changes might be required.
spec:
  validationFailureAction: Enforce
  rules:
    - name: check-svc-metallb-ip-pool-annotation
      match:
        resources:
          kinds:
            - Service   
      exclude:
        resources:
          namespaces:
            - ingress-nginx
      validate:
        message: "allocating IPs from ingress-nginx pool is not allowed"
        pattern:
          metadata:
            =(annotations):
              X(metallb.universe.tf/address-pool): "ingress-nginx"
